Bug 55807 - CRASH when accessing "Tools > Outline Numbering..."
Summary: CRASH when accessing "Tools > Outline Numbering..."
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) macOS (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.7.0
Keywords: regression
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-10-09 13:36 UTC by Roman Eisele
Modified: 2012-10-17 09:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Log file created with LOdev daily 2012-10-09 on Mac OS X 10.6.8 (Intel) (68.73 KB, text/plain)
2012-10-09 13:36 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Eisele 2012-10-09 13:36:06 UTC
Created attachment 68336 [details]
Log file created with LOdev daily 2012-10-09 on Mac OS X 10.6.8 (Intel)

If I try to access the “Outline Numbering” window in Writer via “Tools > Outline Numbering...”, LOdev (master) crashes.


How to reproduce:
0) Rename your user profile in order to preclude any influence of custom
   settings on the test results.
1) Start LOdev;
   -> the Start Center window appears.
2) Click on “Text Document”;
   -> a new empty Write document opens.
3) From the menu bar, select “Tools > Outline Numbering...”;
   -> expected result: the “Outline Numbering” dialog window opens;
   -> acutal result:   LOdev crashes.


Reproducible on Mac OS X 10.6.8 (Intel) with
* LOdev 3.7.0.0.alpha0+ (build ID: 1ae1bca; pull time: 2012-10-09 04:37:06)
* LOdev 3.7.0.0.alpha0+ (build ID: dd11a1e; pull time: 2012-10-04)

NOT reproducible on the same machine with
* LOdev 3.7.0.0.alpha0+ (Build ID: 30d33b1, pull time: 2012-09-27
* LOdev 3.6.3.0+ daily  (Build ID: a00d5c5, pull time: 2012-10-09 04:00:19

So a regression introduced in master branch between 2012-09-27 and 2012-10-04.

I will attach the log file (with simple stack trace w/o symbols procued by Mac OS X 10.6.8 (Intel).
Comment 1 Roman Eisele 2012-10-09 13:55:02 UTC
Already REPRODUCIBLE on the same machine with

LOdev 3.7.0.0.alpha0+ (build ID: 3f84462b; pull time: 012-09-30 06:38:06)

So a regression introduced by a small mistake in the new (cool!) widged layout feature, which landed in Master right before that build was made?!
Comment 2 Regina Henschel 2012-10-09 22:17:07 UTC
I have got a crash with the same action in AOO. There it only occurs, if the options in "Enhanced language support" are checked. What is your setting for these options?
Comment 3 Roman Eisele 2012-10-10 07:40:09 UTC
(In reply to comment #2)
> I have got a crash with the same action in AOO. There it only occurs, if the
> options in "Enhanced language support" are checked. What is your setting for
> these options?

As I have mentioned in comment #0, my first test step is to reset my LibO/LOdev user profile, so that default settings are used everywhere. Consequently, in “Options > Language Settings > Languages”, neither “Show UI elements for East Asian writings” nor “Show UI elements for Bi-Directional writing” is checked
(as these options are labelled now -- much better than in 3.3 to 3.6!).
Nevertheless, the latest daily builds crash consistently, since 2012-09-30.
Comment 4 Not Assigned 2012-10-12 09:20:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0144bcb8899845982a8172d870f337533adaf35

Resolves: fdo#55807 crash in tools->outline numbering



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2012-10-12 09:21:46 UTC
That should sort that out anyway, as seen on windows anyway. Definitely reopen if it still persists on MacOSX in a build that contains the above fix.
Comment 6 Roman Eisele 2012-10-12 09:41:18 UTC
(In reply to comment #5)
> That should sort that out anyway, as seen on windows anyway. Definitely
> reopen if it still persists on MacOSX in a build that contains the above fix.

Thank you! I will check this when a new build for MacOSX is available ...
Comment 7 Roman Eisele 2012-10-17 09:07:56 UTC
(In reply to comment #5)
> That should sort that out anyway, as seen on windows anyway. Definitely
> reopen if it still persists on MacOSX in a build that contains the above fix.

VERIFIED as FIXED:

while I can still reproduce this crash on Mac OS X 10.6.8 (Intel) with
  LOdev 3.7.0.0.alpha0+ (build ID: 1ae1bca; pull time: 2012-10-09 04:37:06)
I can no longer reproduce it on the same machine with
  LOdev 3.7.0.0.alpha0+ (build ID: c252694; pull time: 2012-10-12 22:05:41)
. The dialog window works “Outline Numbering” works again correctly.

Thank you again!