Resolves: fdo#55807 crash in tools->outline numbering

Change-Id: I4233fa63d49ed0a3ec3de7fe04eadead9fa7d1bf